--- a/x11/i3/config
+++ b/x11/i3/config
@@ -153,6 +153,15 @@ bindsym $mod+r mode "resize"
 
 bindsym $mod+Escape exec i3lock
 
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
