--- a/x11/i3/config
+++ b/x11/i3/config
@@ -170,6 +170,10 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute s
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
+# gaps
+for_window [class="^.*"] border pixel 2
+gaps inner 10
+
 # workspace bar
 bar {
     status_command i3status
