--- a/x11/i3/config
+++ b/x11/i3/config
@@ -175,6 +175,7 @@ for_window [class="^.*"] border pixel 2
 gaps inner 10
 
 # workspace bar
-bar {
-    status_command i3status
-}
+# bar {
+#     status_command i3status
+# }
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
