--- a/x11/i3/config
+++ b/x11/i3/config
@@ -144,7 +144,7 @@ bindsym $mod+Shift+r restart
 # system commands
 set $mode_system System (l)ock, (e)xit, (p)oweroff, (r)eboot, (s)uspend, (h)ibernate
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3lock, mode "default"
+    bindsym l exec --no-startup-id i3lock -i ~/.wallpaper.png, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
     bindsym p exec --no-startup-id systemctl poweroff, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
@@ -159,7 +159,7 @@ mode "$mode_system" {
 bindsym $mod+Home mode "$mode_system"
 
 # screen locking
-bindsym $mod+Escape exec i3lock
+bindsym $mod+Escape exec i3lock -i ~/.wallpaper.png
 
 # pulseaudio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
@@ -171,7 +171,7 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
 # gaps
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 1
 gaps inner 10
 
 # workspace bar
