--- a/x11/i3/config
+++ b/x11/i3/config
@@ -159,7 +159,7 @@ mode "$mode_system" {
 bindsym $mod+Home mode "$mode_system"
 
 # screen locking
-bindsym $mod+Escape exec i3lock -i ~/.wallpaper.png
+bindsym $mod+Escape exec --no-startup-id i3lock -i ~/.wallpaper.png
 
 # pulseaudio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
@@ -167,8 +167,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # 
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # screen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20 # decrease screen brightness
 
 # gaps
 for_window [class="^.*"] border pixel 1
