--- a/x11/i3/config
+++ b/x11/i3/config
@@ -74,7 +74,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-bindsym $mod+d focus child
+bindsym $mod+z focus child
 
 # workspace definition
 set $ws1 "1"
