Add scratchpad to i3

--- a/x11/i3/config
+++ b/x11/i3/config
@@ -112,6 +112,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# scratchpad
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
+
 # resize windows
 mode "resize" {
     # pressing left will shrink the window’s width
