--- a/x11/polybar/config
+++ b/x11/polybar/config
@@ -24,7 +24,7 @@ foreground = #999
 foreground-alt = #ddd
 
 [bar/main]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:eDP1}
 width = 100%
 height = 30
 radius = 0
