--- a/x11/polybar/config
+++ b/x11/polybar/config
@@ -20,8 +20,8 @@
 background = #c4101010
 background-alt = #c4404040
 
-foreground = #999
-foreground-alt = #ddd
+foreground = #aaa
+foreground-alt = #eee
 
 [bar/main]
 monitor = ${env:MONITOR:eDP1}
@@ -47,7 +47,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
+font-0 = "Ubuntu:style=Regular:pixelsize=10;1"
 font-1 = "Font Awesome 5 Free:style=Regular:pixelsize=10;1"
 font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=10;1"
 font-3 = "Font Awesome 5 Brands:pixelsize=10;1"
