--- a/x11/i3/config
+++ b/x11/i3/config
@@ -174,6 +174,10 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
 
+# mini window
+bindsym $mod+u fullscreen disable, floating enable, border none, sticky enable, resize set 600px 400px, move position 1300px 20px
+bindsym $mod+i floating disable, border normal, sticky disable
+
 # workspace bar
 # bar {
 #     status_command i3status
