--- a/x11/themes/qt5ct.conf
+++ b/x11/themes/qt5ct.conf
@@ -5,8 +5,8 @@ standard_dialogs=gtk2
 style=gtk2
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0&\0\x42\0i\0t\0s\0t\0r\0\x65\0\x61\0m\0 \0V\0\x65\0r\0\x61\0 \0S\0\x61\0n\0s@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0&\0\x42\0i\0t\0s\0t\0r\0\x65\0\x61\0m\0 \0V\0\x65\0r\0\x61\0 \0S\0\x61\0n\0s@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+fixed=@Variant(\0\0\0@\0\0\0\b\0H\0\x61\0\x63\0k@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+general=@Variant(\0\0\0@\0\0\0\x12\0\x43\0\x61\0n\0t\0\x61\0r\0\x65\0l\0l@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
 
 [Interface]
 activate_item_on_single_click=1
@@ -22,4 +22,4 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\n\0\0\0%\0\0\au\0\0\x4-\0\0\0\v\0\0\0&\0\0\at\0\0\x4,\0\0\0\0\0\0\0\0\a\x80)"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\0\x12\0\0\a\x7f\0\0\x4\x19\0\0\x3\xc2\0\0\0\x12\0\0\a}\0\0\x4\x17\0\0\0\0\0\0\0\0\a\x80)
