--- a/x11/themes/qt5ct.conf
+++ b/x11/themes/qt5ct.conf
@@ -1,6 +1,7 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/airy.conf
 custom_palette=false
+icon_theme=Papirus
 standard_dialogs=gtk2
 style=gtk2
 
