--- a/x11/i3/config
+++ b/x11/i3/config
@@ -148,7 +148,7 @@ bindsym $mod+Shift+r restart
 # system commands
 set $mode_system System (l)ock, (e)xit, (p)oweroff, (r)eboot, (s)uspend, (h)ibernate
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3lock -i ~/.wallpaper.png, mode "default"
+    bindsym l exec --no-startup-id i3lock -n -i ~/.wallpaper.png, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
     bindsym p exec --no-startup-id systemctl poweroff, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
@@ -163,7 +163,7 @@ mode "$mode_system" {
 bindsym $mod+Home mode "$mode_system"
 
 # screen locking
-bindsym $mod+Escape exec --no-startup-id i3lock -i ~/.wallpaper.png
+bindsym $mod+Escape exec --no-startup-id i3lock -n -i ~/.wallpaper.png
 
 # pulseaudio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
