Add transparency to dropdown menus

--- a/x11/compton.conf
+++ b/x11/compton.conf
@@ -238,6 +238,9 @@ wintypes:
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
+    dropdown_menu = {
+        opacity = 0.70;
+    };
 };
 
 ######################
