Add transparency to other menus

--- a/x11/compton.conf
+++ b/x11/compton.conf
@@ -241,6 +241,12 @@ wintypes:
     dropdown_menu = {
         opacity = 0.70;
     };
+    popup_menu = {
+        opacity = 0.70;
+    };
+    utility = {
+        opacity = 0.70;
+    };
 };
 
 ######################
