--- a/x11/polybar/config
+++ b/x11/polybar/config
@@ -25,8 +25,7 @@ background-alt = #404040
 foreground = #aaa
 foreground-alt = #eee
 
-[bar/main]
-monitor = ${env:MONITOR:eDP1}
+[bar/base]
 width = 100%
 height = 30
 radius = 0
@@ -68,6 +67,16 @@ scroll-down = i3wm-wsprev
 cursor-click = pointer
 cursor-scroll = default
 
+[bar/main]
+inherit = bar/base
+;monitor = ${env:MONITOR:eDP1}
+monitor = eDP1
+
+[bar/main-alt]
+inherit = bar/base
+;monitor = ${env:MONITOR:HDMI2}
+monitor = HDMI2
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:100:...%
@@ -81,7 +90,7 @@ wrapping-scroll = false
 enable-click = true
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode = %mode%
 label-mode-padding = 2
