--- a/x11/polybar/config
+++ b/x11/polybar/config
@@ -25,7 +25,9 @@ background-alt = #404040
 foreground = #aaa
 foreground-alt = #eee
 
-[bar/base]
+[bar/main]
+;monitor = ${env:MONITOR:eDP1}
+monitor = eDP1
 width = 100%
 height = 30
 radius = 0
@@ -55,7 +57,6 @@ font-3 = "Font Awesome 5 Brands:pixelsize=11;1"
 
 modules-left = i3 xwindow
 modules-center = date
-;modules-right = pulseaudio xbacklight cpu memory wlan eth battery0 battery1
 modules-right = pulseaudio xbacklight cpu memory battery0 battery1
 
 tray-position = right
@@ -67,15 +68,12 @@ scroll-down = i3wm-wsprev
 cursor-click = pointer
 cursor-scroll = default
 
-[bar/main]
-inherit = bar/base
-;monitor = ${env:MONITOR:eDP1}
-monitor = eDP1
-
 [bar/main-alt]
-inherit = bar/base
+inherit = bar/main
 ;monitor = ${env:MONITOR:HDMI2}
 monitor = HDMI2
+
+tray-position = none;
 
 [module/xwindow]
 type = internal/xwindow
