Improve autorandr settings

--- a/x11/i3/config
+++ b/x11/i3/config
@@ -228,4 +228,4 @@ client.placeholder      #000000 #000000 #ffffff #000000   #000000
 client.background       #ffffff
 
 # background programs
-exec_always --no-startup-id "autorandr --change; $HOME/.fehbg; $HOME/.config/polybar/launch.sh; compton -b"
+exec_always --no-startup-id "autorandr horizontal; $HOME/.fehbg; $HOME/.config/polybar/launch.sh; compton -b"
