Add compton fixes

--- a/x11/compton.conf
+++ b/x11/compton.conf
@@ -118,7 +118,11 @@ alpha-step = 0.06;
 
 opacity-rule = [
     # Avoid drawing multiple windows on top of each other
-    "0:_NET_WM_STATE@:32a = '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_HIDDEN'",
+    "0:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_HIDDEN'",
 
     "90:class_g *?= 'Rofi'"
 ];
@@ -208,7 +212,9 @@ dbe = false;
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
 # paint-on-overlay may make the flickering less obvious.
-unredir-if-possible = false;
+unredir-if-possible = true;
+
+paint-on-overlay = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [ ];
