Update spacevim to support go

--- a/modules/spacevim/init.toml
+++ b/modules/spacevim/init.toml
@@ -42,11 +42,16 @@
     filetypes = [
         "c",
         "cpp",
+        "go",
         "python",
         "rust"
     ]
+    [layers.override_cmd]
+        go = ["gopls"]
 [[layers]]
     name = "lang#c"
+[[layers]]
+    name = "lang#go"
 [[layers]]
     name = "lang#rust"
 [[layers]]
