--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -23,3 +23,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xsel -bi'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xsel -bi'
+
+# Key combos
+bind e setw synchronize-panes
