chore: add lazyvim module
Signed-off-by: Justin Chadwell <me@jedevc.com>

--- a/modules/nvim/config.ini
+++ b/modules/nvim/config.ini
@@ -1,7 +1,5 @@
 [meta]
 name = nvim
 
-[contents]
-.config/nvim/init.vim = init.vim
-.config/nvim/core.vim = core.vim
-.config/nvim/vscode.vim = vscode.vim
+[symlinks]
+.config/nvim = config
